--- a/application/index.yaml
+++ b/application/index.yaml
@@ -14,4 +14,9 @@ indexes:
   properties:
   - name: employee
   - name: date
+
+- kind: PerformanceReview
+  properties:
+  - name: employee
+  - name: date
     direction: desc
