PRAG-59 changes in handlers and templates according to models' changes

--- a/application/index.yaml
+++ b/application/index.yaml
@@ -31,3 +31,8 @@ indexes:
   - name: employee
   - name: start_date
     direction: desc
+
+- kind: PerformanceReview
+  properties:
+  - name: manager
+  - name: finish_date
