--- a/application/index.yaml
+++ b/application/index.yaml
@@ -24,6 +24,12 @@ indexes:
 - kind: PerformanceReview
   properties:
   - name: employee
+  - name: finish_date
+    direction: desc
+
+- kind: PerformanceReview
+  properties:
+  - name: employee
   - name: start_date
 
 - kind: PerformanceReview
