--- a/application/index.yaml
+++ b/application/index.yaml
@@ -19,4 +19,10 @@ indexes:
 - kind: PerformanceReview
   properties:
   - name: manager
+  - name: date
+    direction: desc
+
+- kind: PerformanceReview
+  properties:
+  - name: manager
   - name: finish_date
