--- a/application/index.yaml
+++ b/application/index.yaml
@@ -18,5 +18,17 @@ indexes:
 
 - kind: PerformanceReview
   properties:
+  - name: employee
+  - name: finish_date
+    direction: desc
+
+- kind: PerformanceReview
+  properties:
+  - name: employee
+  - name: start_date
+    direction: desc
+
+- kind: PerformanceReview
+  properties:
   - name: manager
   - name: finish_date
