--- a/application/cron.yaml
+++ b/application/cron.yaml
@@ -2,3 +2,8 @@ cron:
 - description: send mail about pr
   url: /check
   schedule: every 24 hours
+
+cron:
+- description: automatic creation of performance review
+  url: /pr/automatic
+  schedule: every 24 hours
